package com.smartinventory.inventory.entity;

public enum OrderStatus {
    DRAFT, CONFIRMED, RECEIVED, CANCELLED,PARTIALLY_RECEIVED
}
